--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
     <div id="cmd">enter <e>"list"</e> to see all commands<br><br>
     </div>
     <div id="cmdbar">
+
+<center>
+<h1 style="color:green;">Shadow</h1>
+</center>
+
       <input type="text" id="command" placeholder="enter command here...">
     </div>
   </body>
