--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <title>Hacker Terminal</title>
+    <title>Hacked By Shadow</title>
   </head>
   <body>
     <div id="cmd">enter <e>"list"</e> to see all commands<br><br>
